# rust-electron-sycamore-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  justfile  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml
crates/backend/: Cargo.toml  package-lock.json  package.json
crates/backend/src/: config.rs  core.rs  lib.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  input.css  styles-vanilla.css  styles.css
crates/frontend/src/: config.rs  lib.rs  math.rs  state.rs
electron/main/: index.js
electron/preload/: index.js
scripts/: build.sh
