[package]
name = "backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
# cdylib for Neon native module, rlib for testing
crate-type = ["cdylib", "rlib"]

[dependencies]
neon = { version = "1", default-features = false, features = ["napi-6"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
