[package]
name = "{{crate_name}}_frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sycamore = "0.9.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
