[package]
name = "frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sycamore = "0.9.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["PointerEvent", "Element"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-timers = "0.3"
